# SGE

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: github-actions-demo.yml
docs/: index.md
scripts/: entrypoint.sh
sge_project/: db_response_products.db  manage.py
sge_project/app/: metrics.py  settings.py  urls.py  views.py  wsgi.py
sge_project/app/templates/: base.html  home.html
sge_project/brands/: admin.py  forms.py  models.py  urls.py  views.py
sge_project/brands/migrations/: 0001_initial.py
sge_project/brands/templates/: brand_create.html  brand_delete.html  brand_detail.html  brand_list.html  brand_update.html
sge_project/categories/: admin.py  forms.py  models.py  urls.py  views.py
sge_project/categories/migrations/: 0001_initial.py
sge_project/categories/templates/: category_create.html  category_delete.html  category_detail.html  category_list.html  category_update.html
sge_project/chatbot/: execute_code.py  urls.py  views.py
sge_project/chatbot/templates/: chatbot.html
sge_project/inflows/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
sge_project/inflows/migrations/: 0001_initial.py
sge_project/inflows/templates/: inflow_create.html  inflow_detail.html  inflow_list.html
sge_project/outflows/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
sge_project/outflows/migrations/: 0001_initial.py
sge_project/outflows/templates/: Outflow_create.html  Outflow_detail.html  Outflow_list.html
sge_project/products/: admin.py  forms.py  models.py  urls.py  views.py
sge_project/products/migrations/: 0001_initial.py
sge_project/products/templates/: product_create.html  product_list.html  (+3 more)
sge_project/scripts/: execute.py
sge_project/suppliers/: admin.py  forms.py  models.py  urls.py  views.py
(+13 files in other folders)
